--- a/price.html
+++ b/price.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Price List</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Price List</h1>
     <table border="1" cellpadding="10">
-        <thead>
-            <tr>
-                <th>Item</th>
-                <th>Price</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Product 1</td>
-                <td>$10</td>
-            </tr>
-            <tr>
-                <td>Product 2</td>
-                <td>$20</td>
-            </tr>
-            <tr>
-                <td>Product 3</td>
-                <td>$30</td>
-            </tr>
-        </tbody>
+      <thead>
+        <tr>
+          <th>Item</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Product 1</td>
+          <td>$10</td>
+        </tr>
+        <tr>
+          <td>Product 2</td>
+          <td>$20</td>
+        </tr>
+        <tr>
+          <td>Product 3</td>
+          <td>$30</td>
+        </tr>
+      </tbody>
     </table>
-</body>
+  </body>
 </html>
