--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Владимир - наш ТИМ лид</h1>
-    <p>Team Dream</p>
-</body>
+  </head>
+  <body>
+    <header>
+      <h1>Владимир - наш ТИМ лид</h1>
+    </header>
+    <main>
+      <p>Team Dream</p>
+    </main>
+    <p>Изменения от Тимлида</p>
+    <footer>footer</footer>
+  </body>
 </html>
